Fix whitespaces

--- a/src/styles/roadmap.css
+++ b/src/styles/roadmap.css
@@ -66,10 +66,15 @@ Main components
     0 0 4px #161a1c, 0 0 4px #161a1c, 0 0 4px #161a1c, 0 0 4px #161a1c;
   position: relative;
 }
+
+.xah-timeline-headlines h2 {
+  max-width: 80%;
+}
 @media only screen and (max-width: 1230px) {
   .xah-timeline-headlines h1,
   .xah-timeline-headlines h2 {
     margin-left: 60px;
+    margin-right: 30px;
   }
 }
 
